<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#C0C0C0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:textColor="@color/text_color"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#C0C0C0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dip" >

            <Button
                android:id="@+id/barcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_barcode"
                android:text="@string/barcode"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/smartcard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_smart_card"
                android:text="@string/smartcard"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mifare"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mifare"
                android:text="@string/mifare"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/touchscreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_touch_screen"
                android:text="@string/touchscreen"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C0C0C0"
        android:gravity="right"
        android:paddingRight="5dp"
        android:textColor="#303030"
        android:textSize="12sp" />

</LinearLayout>